Edit and moving files to directories,

--- a/BlackJack/BlackJack.html
+++ b/BlackJack/BlackJack.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <title>Passenger</title>
-<link rel="stylesheet" href="Styles/styleB.css">
-<script src="Scripts/BlackJack.js"></script>
+<link rel="stylesheet" href="styleB.css">
+<script src="BlackJack.js"></script>
 </head>
 <body>
 <div class="card">
