--- a/Counter/Passgner.html
+++ b/Counter/Passgner.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <title>Passenger</title>
-<link rel="stylesheet" href="Styles/styleP.css">
-<script src="Scripts/Counter.js"></script>
+<link rel="stylesheet" href="styleP.css">
+<script src="Counter.js"></script>
 </head>
 <body>
 <div class="card">
